[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/slots/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/slots/End.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/slots/Slots.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 75, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75, 60 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75, 60 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 75, 60 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 75, 60 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 70, 60 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 75, 60 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 75, 60 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 60 )

[node name="Slots" type="Node2D"]
script = ExtResource( 3 )

[node name="Slot20" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 631 )
value = 2000
symbol = "20"

[node name="Shape" parent="Slot20" index="0"]
shape = SubResource( 1 )

[node name="Slot10" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 631 )
value = 1000
symbol = "10"

[node name="Shape" parent="Slot10" index="0"]
shape = SubResource( 2 )

[node name="Slot5" parent="." instance=ExtResource( 1 )]
position = Vector2( 439, 633 )
value = 500
symbol = "5"

[node name="Shape" parent="Slot5" index="0"]
position = Vector2( 9, -2 )
shape = SubResource( 3 )

[node name="Slot1" parent="." instance=ExtResource( 1 )]
position = Vector2( 610, 627 )
value = 100
symbol = "1"

[node name="Shape" parent="Slot1" index="0"]
position = Vector2( -2, 4 )
shape = SubResource( 4 )

[node name="SlotQ" parent="." instance=ExtResource( 1 )]
position = Vector2( 771, 633 )
value = 25
symbol = "Q"

[node name="Shape" parent="SlotQ" index="0"]
position = Vector2( -3, -2 )
shape = SubResource( 5 )

[node name="SlotD" parent="." instance=ExtResource( 1 )]
position = Vector2( 930, 627 )
value = 10
symbol = "D"

[node name="Shape" parent="SlotD" index="0"]
position = Vector2( -7, 4 )
shape = SubResource( 6 )

[node name="SlotN" parent="." instance=ExtResource( 1 )]
position = Vector2( 1080, 631 )
value = 5
symbol = "N"

[node name="Shape" parent="SlotN" index="0"]
position = Vector2( -2, 0 )
shape = SubResource( 7 )

[node name="SlotP" parent="." instance=ExtResource( 1 )]
position = Vector2( 1241, 640 )
value = 1
symbol = "P"

[node name="Shape" parent="SlotP" index="0"]
position = Vector2( -3, -9 )
shape = SubResource( 8 )

[node name="End" parent="." instance=ExtResource( 2 )]
position = Vector2( 1343, 604 )

[node name="Shape" parent="End" index="0"]
shape = SubResource( 9 )
[connection signal="slot_entered" from="Slot20" to="." method="_on_slot_entered"]
[connection signal="slot_entered" from="Slot10" to="." method="_on_slot_entered"]
[connection signal="slot_entered" from="Slot5" to="." method="_on_slot_entered"]
[connection signal="slot_entered" from="Slot1" to="." method="_on_slot_entered"]
[connection signal="slot_entered" from="SlotQ" to="." method="_on_slot_entered"]
[connection signal="slot_entered" from="SlotD" to="." method="_on_slot_entered"]
[connection signal="slot_entered" from="SlotN" to="." method="_on_slot_entered"]
[connection signal="slot_entered" from="SlotP" to="." method="_on_slot_entered"]

[editable path="Slot20"]

[editable path="Slot10"]

[editable path="Slot5"]

[editable path="Slot1"]

[editable path="SlotQ"]

[editable path="SlotD"]

[editable path="SlotN"]

[editable path="SlotP"]

[editable path="End"]
